# vv_core_inference

./: .gitignore  LICENSE  README.md  calibration_dataset.yaml  check.bash  check_contour.bash  check_contour_fuse.bash  check_fuse.bash  convert.py  convert_onnx_version.py  convert_to_webgl.py  main.py  pyproject.toml  quantize.py  requirements.txt  run.py  test.py  test_dataset.yaml
.github/workflows/: check.yml  test.yml
onnx-typecast/: convert.py  logger.py
vv_core_inference/: forwarder.py  make_decode_forwarder.py  make_yukarin_s_forwarder.py  make_yukarin_sa_forwarder.py  make_yukarin_sosf_forwarder.py  make_yukarin_sosoa_forwarder.py  onnx_decode_forwarder.py  onnx_yukarin_s_forwarder.py  onnx_yukarin_sa_forwarder.py  onnx_yukarin_sosf_forwarder.py  surgeon.py  utility.py
